# droppix

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  scratchpad.md
.claude/rules/: agent-tooling-sync.md  docs-maintenance.md
.claude/skills/: README.md
.cursor/rules/: agent-tooling-sync.mdc  docs-maintenance.mdc
.cursor/skills/: README.md
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_usb.xml
android/app/src/main/res/layout/: activity_connect.xml  activity_main.xml  activity_settings.xml  activity_stream.xml  spinner_dropdown_item.xml  spinner_item.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/resources/: test_server.p12
client/: CMakeLists.txt  README.md
client/gui/: main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h  video_widget.cpp  video_widget.h
client/src/: client_settings.cpp  client_settings.h  keycode_util.h  transport_client.cpp  transport_client.h  video_decoder.cpp  video_decoder.h
client/tests/: test_client_settings.cpp  test_video_decoder_flip.cpp
docs/: ARCHITECTURE.md  README.md  STATUS.md  WIRE.md
docs/lessons/: INDEX.md  _TEMPLATE.md
docs/superpowers/plans/: 2026-06-23-phase0-evdi-foundation.md  2026-06-23-phase1b-android-app.md  2026-06-24-configurable-resolution-refresh.md  2026-06-27-wifi-discovery-part1.md  2026-06-28-tls-pin-pairing.md  2026-06-29-audio-output.md  2026-07-03-multi-monitor.md  2026-07-04-auto-connect-known-monitors.md  2026-07-05-aoa-m0-validation-spike.md  2026-07-05-usb-tethering-transport.md  2026-07-06-aoa-m1-bytechannel.md  2026-07-06-aoa-m3-gui-usb.md  2026-07-06-desktop-backend-m1.md  2026-07-10-client-owned-display-settings-android.md  2026-07-12-brightness-contrast.md  2026-07-12-render-stage-flip.md  2026-07-13-onscreen-keyboard.md  2026-07-16-hw-encode.md
docs/superpowers/specs/: 2026-06-23-android-extended-display-design.md  2026-06-23-droppix-wire-protocol.md  2026-06-23-phase1b-device-findings.md  2026-06-24-configurable-resolution-refresh-design.md  2026-06-24-host-gui-design.md  2026-06-24-latency-baseline-findings.md  2026-06-24-touch-input-design.md  2026-06-27-gui-restyle-design.md  2026-06-27-wifi-discovery-client-gui-design.md  2026-06-28-tls-pin-pairing-design.md  2026-06-29-audio-output-design.md  2026-06-30-client-discovery-usb-design.md  2026-07-02-fat-appimage-design.md  2026-07-02-flatpak-design.md  2026-07-02-multi-touch-design.md  2026-07-02-pairing-code-ux-design.md  2026-07-03-multi-monitor-design.md  2026-07-03-two-finger-rightclick-design.md  2026-07-04-auto-connect-known-monitors-design.md  2026-07-05-aoa-usb-transport-design.md  2026-07-05-cross-desktop-portability-design.md  2026-07-05-usb-tethering-transport-design.md  2026-07-06-aoa-m3-gui-usb-detection-design.md  2026-07-06-desktop-backend-m1-design.md  2026-07-10-client-owned-display-settings-design.md  2026-07-11-quality-rotationlock-overlay-design.md  2026-07-12-brightness-contrast-design.md  2026-07-12-mouse-input-design.md  2026-07-12-render-stage-flip-design.md  2026-07-13-keyboard-input-design.md  2026-07-13-mirror-mode-design.md  2026-07-13-onscreen-keyboard-design.md  2026-07-13-stylus-design.md  2026-07-16-hw-encode-design.md  2026-07-18-cgvirtualdisplay-oss-research.md
host/: CMakeLists.txt
host/gui/: adb_manager.cpp  adb_manager.h  aoa_known_store.cpp  aoa_known_store.h  aoa_scanner.cpp  aoa_scanner.h  approved_store.cpp  approved_store.h  args_builder.cpp  args_builder.h  audio_sink.cpp  audio_sink.h  auto_connect.cpp  auto_connect.h  cert_manager.cpp  cert_manager.h  main.cpp  main_window.cpp  main_window.h  mdns_advertiser.cpp  mdns_advertiser.h  mdns_browser.cpp  mdns_browser.h  port_alloc.cpp  port_alloc.h  profile_store.cpp  profile_store.h  resources.qrc  session_manager.cpp  session_manager.h  settings.h  settings_dialog.cpp  settings_dialog.h  stats_parser.cpp  stats_parser.h  stream_controller.cpp  stream_controller.h  style.h  tether_scanner.cpp  tether_scanner.h  (+2 more)
host/gui/tests/: test_aoa_known_store.cpp  test_approved_store.cpp  test_auto_connect.cpp  test_port_alloc.cpp  test_profile_store.cpp  test_session_manager.cpp
host/src/: aoa_channel.cpp  aoa_channel.h  aoa_connect.cpp  aoa_connect.h  aoa_scan.cpp  aoa_scan.h  approval.h  audio_streamer.cpp  audio_streamer.h  byte_channel.h  capturer.cpp  cvt.cpp  cvt.h  desktop_backend.cpp  desktop_backend.h  edid.cpp  edid.h  encoder_factory.cpp  encoder_factory.h  frame_source.h  input_injector.cpp  input_injector.h  input_map.cpp  input_map.h  mdns_browse.cpp  mdns_browse.h  monitor_geometry.cpp  monitor_geometry.h  nvenc_encoder.cpp  nvenc_encoder.h  orientation.h  pairing_code.h  protocol.cpp  protocol.h  session_params.cpp  session_params.h  socket_channel.cpp  socket_channel.h  software_encoder.cpp  software_encoder.h  (+21 more)
host/tests/: test_aoa_scan.cpp  test_approval.cpp  test_args_builder.cpp  test_audio_sink.cpp  test_audio_streamer.cpp  test_cvt.cpp  test_desktop_backend.cpp  test_edid.cpp  test_encoder_factory.cpp  test_input_map.cpp  test_mdns_browse.cpp  test_monitor_geometry.cpp  test_orientation.cpp  test_pairing_code.cpp  test_protocol.cpp  test_session_params.cpp  test_socket_channel.cpp  test_software_encoder.cpp  test_stat_accumulator.cpp  test_stats_parser.cpp  test_tap_gesture.cpp  test_test_pattern_source.cpp  test_tether_discovery.cpp  test_transport_server.cpp  test_usb_scan.cpp  test_virtual_display.cpp  test_wake.cpp
macos/: README.md
packaging/android/: build-apk.sh
packaging/appimage/: build-appimage.sh  build-client-appimage.sh
packaging/flatpak/: build-client-flatpak.sh  build-flatpak.sh  host-shim  org.droppix.Client.desktop  org.droppix.Client.metainfo.xml  org.droppix.Client.yml  org.droppix.Droppix.desktop  org.droppix.Droppix.metainfo.xml  org.droppix.Droppix.yml
scripts/: android-container.sh  check-agent-sync.sh  install-polkit-rule.sh
spike/aoa/: README.md  aoa_spike.c
(+40 files in other folders)
